<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddTaskActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/taskTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/title"/>



    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskTitle"/>

    <EditText
        android:id="@+id/taskDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_hint"
        app:layout_constraintStart_toEndOf="@id/details"
        app:layout_constraintTop_toBottomOf="@id/taskTitle"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/priority"
        app:layout_constraintTop_toBottomOf="@id/taskDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/taskPriority"/>

    <EditText
        android:id="@+id/taskPriority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/priority_hint"
        app:layout_constraintTop_toBottomOf="@id/taskDetails"
        app:layout_constraintStart_toEndOf="@id/priority"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskPriority"
        android:onClick="save"/>

</android.support.constraint.ConstraintLayout>